<resources>
    <string name="app_name">CenigmaJava</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_edit">Edit Profile</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_privacy">Privacy &amp; Legal Policy</string>
    <string name="menu_about">About us</string>
    <string name="msg_token_fmt">Token is: </string>
    <string name="default_notification_channel_id">Channel ID</string>
</resources>