<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_edit" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_notifications_none_24"
            android:title="@string/menu_notification" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_dynamic_feed_24"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/menu_privacy" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>
</menu>