<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cenigmajava.ui.edit.EditFragment"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cenigmajava.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cenigmajava.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_privacy"
        android:name="com.example.cenigmajava.ui.privacy.PrivacyFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_privacy" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.cenigmajava.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>